[프로젝트] issue template 오류 수정

--- a/.github/ISSUE_TEMPLATE/issue---✨feature.yml
+++ b/.github/ISSUE_TEMPLATE/issue---✨feature.yml
@@ -1,10 +1,7 @@
----
 name: "Issue : ✨Feature"
-about: 기능 추가용 템플릿.
+description: 기능 추가용 템플릿.
 title: '[기능이름]: Feature Title"'
 labels: ["✨ Feature"]
-
----
 body:
   - type: textarea
     attributes:
