[프로젝트] issue template 오타 수정

--- a/.github/ISSUE_TEMPLATE/issue---✨feature.yml
+++ b/.github/ISSUE_TEMPLATE/issue---✨feature.yml
@@ -1,6 +1,6 @@
 name: "Issue : ✨Feature"
 description: 기능 추가용 템플릿.
-title: '[기능이름]: Feature Title"'
+title: "[기능이름]: Feature Title"
 labels: ["✨ Feature"]
 body:
   - type: textarea
