feat: vite용 sass-embedded 패키지 설치 및 ts오류해결(global.d.ts) + reset.scss, token.scss 생성

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,7 +18,8 @@
     "src/**/*.jsx",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.svg"
+    "src/**/*.svg",
+    "global.d.ts"
   ],
   "exclude": ["node_modules", "dist", "**/*.test.js"] //컴파일 제외
 }
