--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@tiptap/extension-blockquote": "^3.0.7",
     "@tiptap/extension-bold": "^3.0.7",
     "@tiptap/extension-code": "^3.0.7",
