--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
     "sass-embedded": "^1.89.2",
     "terser": "^5.43.1",
     "vite": "^7.0.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.45.1",
+    "sass-embedded-darwin-arm64": "^1.89.2"
   }
 }
