fix: build 오류 수정(scss-embedded 삭제)

--- a/package.json
+++ b/package.json
@@ -59,12 +59,10 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "sass": "^1.89.2",
-    "sass-embedded": "^1.89.2",
     "terser": "^5.43.1",
     "vite": "^7.0.3"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.45.1",
-    "sass-embedded-darwin-arm64": "^1.89.2"
+    "@rollup/rollup-linux-x64-gnu": "^4.45.1"
   }
 }
